--- a/css/style.css
+++ b/css/style.css
@@ -101,14 +101,30 @@ nav ul li a{
 /* menu mobile */
 @media screen and (max-width: 1200px){
     nav ul{
-        display: none;
         background-color: #DA3939;
+        display: block;
         height: 100%;
-        padding: 85px 0 0 0;
-        width: 250px;
+        padding: 50px 0 0 0;
         position: absolute;
+        width: 0px;
         top: 0;
         right: 0;
+        visibility: hidden; /* para tirar a visibilidade */
+        transition: .6s;
+        overflow-x: hidden;
+    }
+
+    nav.active ul{
+        display: block;
+        width: 250px;
+        visibility: visible; 
+    }
+
+    
+    nav ul li{
+        margin: 45px 0;
+        text-align: center;
+        position: relative;
     }
 
     nav ul li a{
@@ -116,19 +132,59 @@ nav ul li a{
         font-weight: 500;
     }
 
-    nav ul li{
-        margin: 35px 0;
-        text-align: center;
-    }
-    
-    .btn-menu{
-        position: relative;
-        display: block;
-        z-index: 10;
+    nav ul li:after {
+        content:'';
+        width: 200px;
+        height: 2px;
+        background:#ffffff2a;
+        position:absolute;
+        bottom: -25px;
+        left: 50%;
+        transform: translateX(-50%);
     }
 
-    nav.active ul{
+    .btn-menu{
+        position: relative;
+        display: flex;
+        z-index: 10;
+        padding: .5rem 1rem;
+        font-size: 1rem;
+        border: none;
+        background: none;
+        cursor: pointer;
+    }
+
+    #hamburguer{
         display: block;
+        color: #DA3939;
+        border-top: 2px solid;
+        width: 20px;
+        margin-top: 5px;
+    }
+
+    #hamburguer::after, #hamburguer::before{
+        content: '';
+        display: block;
+        width: 20px;
+        height: 2px;
+        background: currentColor;
+        margin-top: 5px;
+        transition: .3s;
+        position: relative; /* porque o top do before só funciona se ele for relative ou absolute */
+    }
+
+    nav.active #hamburguer{
+        border-top: transparent;
+        color: #fff;
+    }
+
+    nav.active #hamburguer::after{
+        transform: rotate(135deg);
+    }
+
+    nav.active #hamburguer::before{
+        transform: rotate(-135deg);
+        top: 7px;
     }
 }
 
