--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ nav ul li a{
 
 /* Primeira seção */
 .secao-1{
-    background-image: url('../imgs/bg-seção-1-mobile.jpeg');
+    background-image: url('../imgs/bg-seção-1.jpeg');
     background-size:cover;
 
 }
@@ -241,8 +241,14 @@ nav ul li a{
 
 /* Segunda seção */
 
+.secao-2{
+    background-color: #DA3939;
+}
 
-
+.container-text-2{
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
 
 /* Terceira seção */
 
