--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,11 +243,60 @@ nav ul li a{
 
 .secao-2{
     background-color: #DA3939;
+    color: #fff;
 }
 
 .container-text-2{
     padding-top: 5%;
     padding-bottom: 5%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.container-text-2 div{
+    width: 50%;
+}
+
+.container-text-2 div img{
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+}
+
+.container-text-2 h1{
+    font-weight: 100;
+    margin-bottom: 5%;
+    font-size: clamp(2em, 2.5em + 1.5vw, 4em);
+}
+
+.container-text-2 p{
+    font-size: clamp(1.9em, 0.7em + 1vw, 2em);
+    text-align: justify;
+    padding-right: 15%;
+}
+
+@media screen and (max-width: 980px){
+    .container-text-2{
+        flex-direction: column;
+    }
+
+    .container-text-2 div{
+        width: 100%;
+        margin-bottom: 5%;
+    }
+
+    .container-text-2 div img{
+        width: 100%;
+        margin: 0;
+    }
+
+    .container-text-2 h1{
+        text-align: center;
+    }
+
+    .container-text-2 p{
+        padding-right: 0;
+    }
 }
 
 /* Terceira seção */
