--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,28 @@
-:root{
+:root {
     font-size: 62.5%;
 }
 
-body, p, h1, h2, h3, h4, h5, h6, ul{
+body,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-a, li{
+a,
+li {
     text-decoration: none;
     list-style-type: none
 }
 
-body{
-    background-color: rgb(227, 227, 227);
+body {
     font-family: 'Poppins', sans-serif;
 }
 
@@ -22,12 +30,13 @@ body{
 .logo h1,
 nav ul li a,
 .container-text-1 p span,
-.secao-1 .olharDiferente{
+.secao-1 .olharDiferente,
+.secao-3 h1{
     color: #DA3939;
 }
 
 /* Header */
-header{
+header {
     background-color: #fff;
 
     padding: 15px 0;
@@ -35,28 +44,28 @@ header{
     width: 100%;
 }
 
-.cabecalho{
+.cabecalho {
     display: flex;
     justify-content: space-between;
 }
 
-.logo{
+.logo {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 15px;
 }
 
-.logo img{
+.logo img {
     width: 5em;
 }
 
-.logo h1{
+.logo h1 {
     font-weight: bold;
     font-size: clamp(2em, 1em + 1vw, 2.5em);
 }
 
-nav ul{
+nav ul {
     height: 100%;
     display: flex;
     flex-direction: row;
@@ -64,35 +73,35 @@ nav ul{
     gap: 6em;
 }
 
-nav ul li a{
+nav ul li a {
     font-size: clamp(0.4em, 0.5em + 0.7vw, 2.5em);
     font-weight: 700;
 }
 
-.btn-menu{
+.btn-menu {
     display: none;
 }
 
-.container-padding{
+.container-padding {
     padding: 0 20%;
 }
 
 /* Quebras para manter as mesmas margens*/
 @media screen and (max-width: 1980px) {
-    .container-padding{
+    .container-padding {
         padding: 0 10%;
     }
 }
 
 @media screen and (max-width: 1600px) {
-    .container-padding{
+    .container-padding {
         padding: 0 5%;
     }
 }
 
 /* menu mobile */
-@media screen and (max-width: 980px){
-    nav ul{
+@media screen and (max-width: 980px) {
+    nav ul {
         background-color: #DA3939;
         display: block;
         height: 100%;
@@ -101,42 +110,43 @@ nav ul li a{
         width: 0px;
         top: 0;
         right: 0;
-        visibility: hidden; /* para tirar a visibilidade */
+        visibility: hidden;
+        /* para tirar a visibilidade */
         transition: .6s;
         overflow-x: hidden;
     }
-    
-    nav.active ul{
+
+    nav.active ul {
         display: block;
         width: 250px;
-        visibility: visible; 
+        visibility: visible;
         z-index: 1000;
     }
-    
-    nav ul li{
+
+    nav ul li {
         margin: 45px 0;
         text-align: center;
         position: relative;
     }
-    
-    nav ul li a{
+
+    nav ul li a {
         color: #fff;
         font-weight: 500;
         font-size: 1.2em;
     }
-    
+
     nav ul li:after {
-        content:'';
+        content: '';
         width: 200px;
         height: 2px;
-        background:#ffffff2a;
-        position:absolute;
+        background: #ffffff2a;
+        position: absolute;
         bottom: -25px;
         left: 50%;
         transform: translateX(-50%);
     }
-    
-    .btn-menu{
+
+    .btn-menu {
         position: relative;
         display: flex;
         z-index: 10;
@@ -147,16 +157,17 @@ nav ul li a{
         cursor: pointer;
         z-index: 1001;
     }
-    
-    #hamburguer{
+
+    #hamburguer {
         display: block;
         color: #DA3939;
         border-top: 2px solid;
         width: 20px;
         margin-top: 5px;
     }
-    
-    #hamburguer::after, #hamburguer::before{
+
+    #hamburguer::after,
+    #hamburguer::before {
         content: '';
         display: block;
         width: 20px;
@@ -164,27 +175,28 @@ nav ul li a{
         background: currentColor;
         margin-top: 5px;
         transition: .3s;
-        position: relative; /* porque o top do before só funciona se ele for relative ou absolute */
+        position: relative;
+        /* porque o top do before só funciona se ele for relative ou absolute */
     }
-    
-    nav.active #hamburguer{
+
+    nav.active #hamburguer {
         border-top: transparent;
         color: #fff;
     }
-    
-    nav.active #hamburguer::after{
+
+    nav.active #hamburguer::after {
         transform: rotate(135deg);
     }
-    
-    nav.active #hamburguer::before{
+
+    nav.active #hamburguer::before {
         transform: rotate(-135deg);
         top: 7px;
     }
 }
 
 /* logo no mobile */
-@media screen and (max-width: 720px){
-    .logo img{
+@media screen and (max-width: 720px) {
+    .logo img {
         width: 5em;
     }
 }
@@ -192,30 +204,30 @@ nav ul li a{
 /* -------------------------- Main -------------------------- */
 
 /* Primeira seção */
-.secao-1{
+.secao-1 {
     background-image: url('../imgs/bg-seção-1.jpeg');
-    background-size:cover;
+    background-size: cover;
 
 }
 
-.container-text-1{
+.container-text-1 {
     color: #fff;
     padding-top: 5%;
     padding-bottom: 5%;
 }
 
-.container-text-1 h1{
-    font-size: clamp(1.5em, 1.5em + 1.5vw, 4em);
+.container-text-1 h1 {
+    font-size: clamp(1.5em, 2.2em + 1.5vw, 4em);
 }
 
-.container-text-1 p{
+.container-text-1 p {
     font-size: clamp(1em, 1.1em + 1vw, 2em);
     margin-top: 15px;
     width: 48%;
     text-align: justify;
 }
 
-.container-text-1 a{
+.container-text-1 a {
     background-color: #44EE55;
     color: #fff;
     padding: 1em 1.5em;
@@ -226,14 +238,14 @@ nav ul li a{
     font-weight: bold;
 }
 
-.container-text-1 a:hover{
+.container-text-1 a:hover {
     background-color: #3cbf49;
     color: #FEFEFE;
 }
 
 /* quebra para o parágrago da seção 1 ficar adequado a tela mobile */
-@media screen and (max-width: 980px){
-    .container-text-1 p{
+@media screen and (max-width: 980px) {
+    .container-text-1 p {
         width: 75%;
         margin-top: 5px;
     }
@@ -241,64 +253,125 @@ nav ul li a{
 
 /* Segunda seção */
 
-.secao-2{
+.secao-2 {
     background-color: #DA3939;
     color: #fff;
 }
 
-.container-text-2{
+.container-text-2 {
     padding-top: 5%;
     padding-bottom: 5%;
     display: flex;
     justify-content: space-between;
 }
 
-.container-text-2 div{
+.container-text-2 div {
     width: 50%;
 }
 
-.container-text-2 div img{
+.container-text-2 div img {
     width: 80%;
     display: block;
     margin: 0 auto;
 }
 
-.container-text-2 h1{
+.container-text-2 h1 {
     font-weight: 100;
     margin-bottom: 5%;
     font-size: clamp(2em, 2.5em + 1.5vw, 4em);
 }
 
-.container-text-2 p{
+.container-text-2 p {
     font-size: clamp(1.9em, 0.7em + 1vw, 2em);
     text-align: justify;
     padding-right: 15%;
 }
 
-@media screen and (max-width: 980px){
-    .container-text-2{
+@media screen and (max-width: 980px) {
+    .container-text-2 {
         flex-direction: column;
     }
 
-    .container-text-2 div{
+    .container-text-2 div {
         width: 100%;
         margin-bottom: 5%;
     }
 
-    .container-text-2 div img{
+    .container-text-2 div img {
         width: 100%;
         margin: 0;
     }
 
-    .container-text-2 h1{
+    .container-text-2 h1 {
         text-align: center;
     }
 
-    .container-text-2 p{
+    .container-text-2 p {
         padding-right: 0;
     }
 }
 
 /* Terceira seção */
 
+.card {
+    width: 28%;
+    border-radius: 10px;
+    box-shadow: 0px 0px 8px 1px #00000075;
+    background-color: #DA3939;
+    color: #fff;
+}
+
+.card{
+
+}
+
+.cards-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.secao-3{
+    padding-top: 4em;
+    padding-bottom: 4em;
+}
+
+.secao-3 img {
+    width: 100%;
+    border-radius: 10px 10px 0 0;
+}
+
+.secao-3 h1{
+    text-align: center;
+    margin-bottom: 1.2em;
+    font-size: clamp(2em, 2.5em + 1.5vw, 4em);
+    font-weight: 100;
+}
+
+.container-text-3{
+    padding: 20px;
+}
+
+.container-text-3 h2{
+    text-align: center;
+    font-size: clamp(1.2em, 1.8em + 1.5vw, 2em);
+    margin-bottom: 1.8em;
+}
+
+@media screen and (max-width: 980px) {
+    .card {
+        width: 70%;
+        margin-bottom: 50px;
+    }
+    
+    .cards-container{
+        align-items: center;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 720px){
+    .card {
+        width: 100%;
+    }
+}
 /* -------------------------- Footer -------------------------- */
