--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,14 +32,23 @@ nav ul li a,
 .container-text-1 p span,
 .secao-1 .olharDiferente,
 .container-text-3 button,
-.secao-3 h1{
+.secao-3 h1,
+.container-5 h2 {
     color: #DA3939;
 }
 
 .secao-2,
-.secao-4 {
+.secao-4,
+.secao-6 {
     background-color: #DA3939;
     color: #fff;
+}
+
+.secao-3,
+.secao-4,
+.secao-5 {
+    padding-top: 5em;
+    padding-bottom: 5em;
 }
 
 /* Header */
@@ -214,7 +223,6 @@ nav ul li a {
 .secao-1 {
     background-image: url('../imgs/bg-seção-1.jpeg');
     background-size: cover;
-
 }
 
 .container-text-1 {
@@ -325,35 +333,30 @@ nav ul li a {
     position: relative;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
-    grid-template-areas: 
-    'imagem'
-    'texto'
-    'texto';
+    grid-template-areas:
+        'imagem'
+        'texto'
+        'texto';
 }
 
-.cards-container{
+.cards-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: 
-    'card-1 card-2 card-3';
+    grid-template-areas:
+        'card-1 card-2 card-3';
     gap: 5%;
 }
 
-.card-1{
+.card-1 {
     grid-area: card-1;
 }
 
-.card-2{
+.card-2 {
     grid-area: card-2;
 }
 
-.card-3{
+.card-3 {
     grid-area: card-3;
-}
-
-.secao-3{
-    padding-top: 5em;
-    padding-bottom: 5em;
 }
 
 .secao-3 img {
@@ -362,14 +365,14 @@ nav ul li a {
     grid-area: imagem;
 }
 
-.secao-3 h1{
+.secao-3 h1 {
     text-align: center;
     margin-bottom: 1.2em;
     font-size: clamp(2em, 2.5em + 1.5vw, 4em);
     font-weight: 100;
 }
 
-.container-text-3{
+.container-text-3 {
     padding: 20px;
     grid-area: texto;
     display: flex;
@@ -377,28 +380,28 @@ nav ul li a {
     justify-content: space-between;
 }
 
-.container-text-3 h2{
+.container-text-3 h2 {
     text-align: center;
     font-size: clamp(1.2em, 1.8em + 1.5vw, 2em);
 }
 
-.container-text-3 .text{
+.container-text-3 .text {
     display: flex;
     justify-content: space-between;
     margin-bottom: 3em;
 }
 
-.container-text-3 .text p{
+.container-text-3 .text p {
     color: #710303;
     font-size: clamp(1.5em, 0.6em + 1vw, 1.5em);
 }
 
-.container-text-3 button{
+.container-text-3 button {
     margin: 0 auto;
     display: block;
 }
 
-.container-text-3 button{
+.container-text-3 button {
     background-color: #fff;
     border: none;
     border-radius: 5px;
@@ -419,34 +422,35 @@ nav ul li a {
     transform: translateX(-50%);
 }
 
-.text-pai{
+.text-pai {
     position: relative;
 }
 
 @media screen and (max-width: 980px) {
-    .cards-container{
+    .cards-container {
         grid-template-columns: 1fr 1fr;
-        grid-template-areas: 
-        'card-1 card-2'
-        'card-3 .';
+        grid-template-areas:
+            'card-1 card-2'
+            'card-3 .';
         gap: 3%;
     }
-    .secao-3{
+
+    .secao-3 {
         padding-bottom: 9em;
     }
 }
 
-@media screen and (max-width: 840px){
-    .cards-container{
+@media screen and (max-width: 840px) {
+    .cards-container {
         grid-template-columns: 1fr;
-        grid-template-areas: 
-        'card-1'
-        'card-2'
-        'card-3';
+        grid-template-areas:
+            'card-1'
+            'card-2'
+            'card-3';
         padding-bottom: 5em;
     }
 
-    .card{
+    .card {
         height: 530px;
         width: 70%;
         margin: 0 auto;
@@ -454,69 +458,242 @@ nav ul li a {
 }
 
 @media screen and (max-width: 760px) {
-    .card{
+    .card {
         height: 490px;
     }
 }
 
 @media screen and (max-width: 680px) {
-    .card{
+    .card {
         width: 100%;
         height: 550px;
     }
 }
 
 @media screen and (max-width: 490px) {
-    .card{
+    .card {
         height: 430px;
     }
 }
 
 /* Quarta seção */
 
-.secao-4{
-    padding-top: 5em;
-    padding-bottom: 5em;
-}
-
-.secao-4 h2{
+.secao-4 h2 {
     font-size: clamp(1.8em, 1em + 1.5vw, 3em);
     font-weight: 100;
 }
 
-.container-4{
+.container-4 {
     display: flex;
     justify-content: space-between;
 }
 
-.container-4 i{
+.container-4 i {
     font-size: clamp(5em, 2em + 1.5vw, 4em);
 }
 
-.container-4 div:last-child{
+.container-4 div:last-child {
     margin: auto;
 }
 
-.container-4 div i:first-child{
+.container-4 div i:first-child {
     margin-right: 20px;
 }
 
-.container-4 a{
+.container-4 a {
     color: #fff;
 }
 
-@media screen and (max-width: 720px){
-    .container-4{
+@media screen and (max-width: 720px) {
+    .container-4 {
         flex-direction: column;
     }
 
-    .container-4 div:first-child{
+    .container-4 div:first-child {
         text-align: center;
     }
 
-    .container-4 div:last-child{
+    .container-4 div:last-child {
         margin: 35px auto 0 auto;
     }
 }
 
+/* Quinta seção */
+
+.container-5 h2 {
+    font-size: clamp(1.8em, 1em + 1.5vw, 2.5em);
+    text-align: justify;
+}
+
+.container-5 {
+    display: flex;
+    justify-content: space-between;
+}
+
+.container-5 div:first-child {
+    padding-right: 10%;
+}
+
+.container-5 div h2 {
+    margin-bottom: 5%;
+}
+
+.container-5 div {
+    width: 50%;
+}
+
+.container-5 div img {
+    width: 80%;
+}
+
+.container-5 a{
+    background-color: #44EE55;
+    color: #fff;
+    padding: 1.2em 1.8em;
+    margin-top: 10px;
+    border-radius: 5px;
+    display: inline-block;
+    font-size: 1.4em;
+    font-weight: bold;
+}
+
+.container-5 a:hover{
+    background-color: #3cbf49;
+    color: #FEFEFE;
+}
+
+@media screen and (max-width: 980px) {
+    .container-5 {
+        flex-direction: column;
+    }
+
+    .container-5 div {
+        width: 100%;
+    }
+
+    .container-5 div:first-child {
+        padding-right: 0;
+        margin-bottom: 5%;
+    }
+
+    .container-5 div img {
+        width: 100%;
+    }
+
+    .container-5 a{
+        margin: 10px 0;
+        text-align: center;
+    }
+
+    .container-5 .btn{
+        display: flex;
+        justify-content: center;
+    }
+}
+
+/* Sexta seção */
+
+.container-6{
+    padding-top: 5em;
+    padding-bottom: 5em;
+}
+
+.container-6 h1{
+    font-size: clamp(2em, 2.5em + 1.5vw, 4em);
+    font-weight: 100;
+    text-align: center;
+    padding-bottom: 1em;
+}
+
+.container-6 .infos-6 h2{
+    font-size: clamp(1.8em, 1em + 1.5vw, 2.5em);
+    text-align: justify;
+    padding-right: 20%;
+}
+
+.container-6 .infos-6{
+    display: flex;
+    justify-content: space-between;
+}
+
+.container-6 .infos-6 .container-esquerda,
+.container-6 .infos-6 .container-direita{
+    width: 50%;
+}
+
+.container-6 .infos-6 div div{
+    width: 90%;
+}
+
+.infos-6 .container-direita{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+.container-6 p{
+    font-size: 1.7em;
+    margin-bottom: 0.5em;
+}
+
+.container-email input{
+    padding: 15px 20px;
+    background: transparent;
+    border-radius: 5px;
+    border: 2px solid #fff;
+    color: #fff;
+    outline: 0;
+    margin-right: 5px;
+}
+
+.container-email input::placeholder{
+    font-size: 1.2em;
+    color: #ffffff5c;
+}
+
+.container-email button{
+    background-color: #fff;
+    color: #DA3939;
+    padding: 15px 20px;
+    border-radius: 5px;
+    font-size: 1.4em;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+}
+
+.container-email button:hover{
+    background-color: #ffffff5c;
+}
+
+.container-whatsapp i{
+    font-size: clamp(5em, 2em + 1.5vw, 4em);
+}
+
+@media screen and (max-width: 980px){
+    .container-6 .infos-6{
+        flex-direction: column;
+    }
+
+    .container-6 .infos-6 .container-esquerda,
+    .container-6 .infos-6 .container-direita{
+        width: 100%;
+    }
+
+    .container-direita {
+        display: flex;
+        justify-content: center;
+    }
+
+    .container-6 .infos-6 h2{
+        padding-right: 0;
+    }
+
+    .container-6 .container-esquerda h2{
+        margin-bottom: 2em;
+    }
+}
+
 /* -------------------------- Footer -------------------------- */
+
