--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,10 +53,11 @@ nav ul li a,
 /* Header */
 header {
     background-color: #fff;
-
-    padding: 15px 0;
-
+    padding: 18px 0;
     width: 100%;
+    position: fixed;
+    z-index: 1000;
+    box-shadow: 0px 4px 13px #0000004a;
 }
 
 .cabecalho {
@@ -85,12 +86,28 @@ nav ul {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 6em;
+    gap: 8em;
 }
 
 nav ul li a {
     font-size: clamp(0.4em, 0.5em + 0.7vw, 2.5em);
     font-weight: 700;
+}
+
+nav ul li{
+    position: relative;
+}
+
+nav ul li a:hover:after{
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: #DA3939;
+    position: absolute;
+    bottom: -25px;
+    left: 50%;
+    top: 27px;
+    transform: translateX(-50%);
 }
 
 .btn-menu {
@@ -113,7 +130,8 @@ nav ul li a {
     nav ul {
         background-color: #DA3939;
         display: block;
-        height: 100%;
+        height: 100vh;
+        box-shadow: -2px 0px 12px 0px #000000cc;
         padding: 50px 0 0 0;
         position: absolute;
         width: 0px;
@@ -129,7 +147,7 @@ nav ul li a {
         display: block;
         width: 250px;
         visibility: visible;
-        z-index: 1000;
+        z-index: 1001;
     }
 
     nav ul li {
@@ -158,13 +176,12 @@ nav ul li a {
     .btn-menu {
         position: relative;
         display: flex;
-        z-index: 10;
         padding: .5rem 1rem;
         font-size: 1rem;
         border: none;
         background: none;
         cursor: pointer;
-        z-index: 1001;
+        z-index: 1002;
     }
 
     #hamburguer {
@@ -220,7 +237,7 @@ nav ul li a {
 
 .container-text-1 {
     color: #fff;
-    padding-top: 5%;
+    padding-top: 12em;
     padding-bottom: 5%;
 }
 
@@ -256,6 +273,10 @@ nav ul li a {
     .container-text-1 p {
         width: 75%;
         margin-top: 5px;
+    }
+
+    .container-text-1 {
+        padding-top: 9.5em;
     }
 }
 
@@ -316,7 +337,7 @@ nav ul li a {
 
 /* Terceira seção */
 
-.secao-3 .container-3{
+.secao-3 .container-3 {
     margin: 5em 0 7em 0;
 }
 
@@ -418,6 +439,7 @@ nav ul li a {
     top: 30px;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 999;
 }
 
 .text-pai {
@@ -708,25 +730,26 @@ footer .container-direita {
     width: 50%;
 }
 
+footer p {
+    font-size: 1.2em;
+    color: #575757;
+    text-align: center;
+    padding-bottom: 15px;
+}
+
 @media screen and (max-width: 980px) {
+
     footer .container-esquerda,
     footer .container-direita {
         width: 100%;
     }
 
-    .container-footer{
+    .container-footer {
         flex-direction: column;
     }
 
-    footer .container-esquerda{
+    footer .container-esquerda {
         justify-content: center;
         margin-bottom: 3em;
     }
-}
-
-footer p{
-    font-size: 1.2em;
-    color: #575757;
-    text-align: center;
-    padding-bottom: 15px;
 }
