--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,18 @@ nav ul li a:hover:after{
     transform: translateX(-50%);
 }
 
+nav ul li a.active:after{
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: #DA3939;
+    position: absolute;
+    bottom: -25px;
+    left: 50%;
+    top: 27px;
+    transform: translateX(-50%);
+}
+
 .btn-menu {
     display: none;
 }
@@ -530,7 +542,7 @@ nav ul li a:hover:after{
 }
 
 .container-5 div {
-    width: 50%;
+    width: 60%;
 }
 
 .container-5 div img {
