--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -371,8 +371,8 @@ nav ul li a.active:after{
     display: grid;
     grid-template-rows: 1fr 80px 120px;
     grid-template-areas:
-        'imagem',
-        'texto',
+        'imagem'
+        'texto'
         'texto'
 }
 
